[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ui/HUD/overview/BuilderOverview.gd" type="Script" id=2]

[node name="BuilderOverview" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -870.0
margin_top = -162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 863.0
margin_bottom = 155.0
mouse_filter = 0
custom_constants/separation = 11

[node name="NameList" type="ItemList" parent="PanelContainer/VBoxContainer"]
margin_right = 856.0
margin_bottom = 27.0
items = [ "Residence", null, false, "House", null, false, "Storage", null, false, "Worker", null, false, "Maker", null, false, "Tower", null, false ]
auto_height = true
max_columns = 6

[node name="BuildingList" type="ItemList" parent="PanelContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 856.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 110 )
items = [ "Small Residence", ExtResource( 1 ), false, "Medium Residence", ExtResource( 1 ), false, "Large Residence", ExtResource( 1 ), false ]
max_columns = 8
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
[connection signal="item_selected" from="PanelContainer/VBoxContainer/NameList" to="." method="_on_NameList_item_selected"]
[connection signal="item_activated" from="PanelContainer/VBoxContainer/BuildingList" to="." method="_on_BuildingList_item_activated"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/BuildingList" to="." method="_on_BuildingList_item_selected"]
